<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MytaskActivity!</string>
    <string name="app_name">MyDemo2015</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    
    <string name="search_today">今日</string>
    <string name="search_1week">本周</string>
    <string name="search_1month">近1个月</string>
    <string name="search_3month">近3个月</string>
    <string name="search_all">全部</string>
    
    <string name="msg_warn">消息提醒</string>
    <string name="msg_state">最新动态</string>
    <string name="msg_center">实时热点</string>
    
    <string name="menu_homepage">首页</string>
    <string name="menu_mine">我的</string>
    <string name="menu_upload">问题上报</string>
    <string name="menu_go">带我去</string>
    <string name="menu_location">所在位置</string>
    <string name="menu_message">消息</string>
	<string name="menu_serach">查询</string>

</resources>